2011-07-15  Murray Cumming  <murrayc@murrayc.com>

	ImageGlom: Save temp files as read-only to avoid unexpected data loss.

	* glom/utility_widgets/imageglom.cc: save_temp_file(): Set the file 
	permissions.

2011-07-15  Murray Cumming  <murrayc@murrayc.com>

	Avoid autoconf warning about datarootdir.

	* glom/libglom/glom.pc.in: Set datarootdir to avoid this warning:
	config.status: WARNING:  'glom/libglom/glom.pc.in' seems to ignore the --datarootdir setting
  as suggested here:
  http://www.gnu.org/software/hello/manual/autoconf/Changed-Directory-Variables.html

2011-07-15  Murray Cumming  <murrayc@murrayc.com>

	ImageGlom: Do not try to get a thumbnail for non-image, non-evince types.
	
	* glom/utility_widgets/imageglom.cc: Just use g_content_type_get_icon(),
	to avoid saving temporary files of huge content, such as video, when just 
	navigating through rows.

2011-07-15  Murray Cumming  <murrayc@murrayc.com>

	ImageGlom: Remove unused member variable.

	* glom/utility_widgets/imageglom.[h|cc]: Also add a comment that 
	gnome_desktop_thumbnail_factory_new() didn't work either when I tried it.

1.19.8:

2011-07-14  Murray Cumming  <murrayc@murrayc.com>

	ImageGlom: Set an appropriate default file filter.

	* glom/utility_widgets/imageglom.cc: evince-view sets its own default, 
	but that's not ideal for us.

2011-07-14  Murray Cumming  <murrayc@murrayc.com>

	ImageGlom: Use G_FILE_ATTRIBUTE_STANDARD_ICON

	* glom/utility_widgets/imageglom.cc: If G_FILE_ATTRIBUTE_THUMBNAIL_PATH 
	doesn't work, use the standard icon. This does seem to work. 

2011-07-14  Murray Cumming  <murrayc@murrayc.com>

	ImageGlom: Try to use G_FILE_ATTRIBUTE_THUMBNAIL_PATH for other file types.

	* glom/utility_widgets/imageglom.[h|cc]: show_image_data():
	Get the mime_types supported by GdkPixbuf and only try to use it if we have 
	a suitable mime type. Otherwise try to get a thumbnail from GFileInfo.
	That doesn't work now, probably because we should do that async.
 